--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.pattern">
 
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
+
     <application
         android:name="com.android.PatternApplication"
         android:allowBackup="true"
@@ -9,10 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@android:style/Theme.Holo.Light">
+        <activity android:name=".qstorage.QStorageActivity"/>
         <!-- 跨进程通信 -->
         <activity android:name=".proxy.aidl.BaiduPushMessageActivity" /> <!-- retrofit -->
-        <activity android:name=".proxy.dynamicproxy.DynamicProxyActivity" />
-        <!-- 静态代理（MVP架构） -->
+        <activity android:name=".proxy.dynamicproxy.DynamicProxyActivity" /> <!-- 静态代理（MVP架构） -->
         <activity android:name=".proxy.staticproxy.StaticProxyActivity" />
         <activity android:name="com.android.MainActivity">
             <intent-filter>
