--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".qstorage.NotMediaQStorageActivity"></activity>
+        <activity android:name=".qstorage.SafQStorageActivity"></activity>
         <activity android:name=".qstorage.MediaQStorageActivity" /> <!-- 跨进程通信 -->
         <activity android:name=".proxy.aidl.BaiduPushMessageActivity" /> <!-- retrofit -->
         <activity android:name=".proxy.dynamicproxy.DynamicProxyActivity" /> <!-- 静态代理（MVP架构） -->
