--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.android.pattern">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="com.android.PatternApplication"
@@ -13,7 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".chain.fakebusiness.AppLauncherChainActivity"></activity>
+        <activity android:name=".template.AsyncTaskActivity"></activity>
+        <activity android:name=".chain.fakebusiness.AppLauncherChainActivity" />
         <activity android:name=".chain.fakebusiness.DownloadActivity" />
         <activity android:name=".chain.okhttp.OkHttpActivity" />
         <activity android:name=".qstorage.SafQStorageActivity" />
